Z-index issue. the upload status window removes scroll bar

--- a/src/app/components/upload/upload.component.scss
+++ b/src/app/components/upload/upload.component.scss
@@ -110,3 +110,18 @@
     }
   }
 }
+
+::ng-deep {
+
+  @media screen and (max-width: 600px) {
+    .fs-upload-pane {
+      margin: 0 !important;
+      max-width: 100vw !important;
+      width: 100% !important;
+
+      .mat-dialog-container {
+        border-radius: 0;
+      }
+    }
+  }
+}
